--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <head>
         <meta charset="UTF-8">
         <title>My portfolio</title>
+        <script async src="https://api.countapi.xyz/hit/https://sigma4749.github.io/html-portfolio//visits?  callback=callbackName"></script>
     </head>
 
     <body>
